--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <a href="https://www.instagram.com/arbin__shrestha/" target = "_blank" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/Arbin2059" target = "_blank" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
+            <p class="footer__copy">&#169; Arbin. All rigths reserved</p>
         </footer>
 
 
