--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Portfolio</title>
+        <link rel = "shortcut icon" type = "image/png" href = "img/thumbs.png">
     </head>
     <body>
         <!--===== HEADER =====-->
