--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Portfolio</title>
-        <link rel = "shortcut icon" type = "image/png" href = "./img/thumbs.png">
+        <link rel = "shortcut icon" type = "image" href = "https://mpng.subpng.com/20191017/wif/transparent-ban-icon-hola-icon-ip-icon-5da842aa89b813.7780504815713082025641.jpg">
     </head>
     <body>
         <!--===== HEADER =====-->
